@@ -12,8 +12,8 @@
 # individuals. For the exact contribution history, see the revision
 # history and logs, available at http://babel.edgewall.org/log/.
 
+import cPickle as pickle
 import os
-import pickle
 from pprint import pprint
 import sys
 
